Fix z-index issues with toolbars and maps

--- a/html/themes/custom/common_design_subtheme/sass/ghi/_ghi-layout-builder.scss
+++ b/html/themes/custom/common_design_subtheme/sass/ghi/_ghi-layout-builder.scss
@@ -13,9 +13,11 @@
   // Position this above the Layout Builder IPE action bar.
   bottom: 64px !important;
 }
+body.toolbar-horizontal .glb-toolbar,
+body.toolbar-horizontal #toolbar-administration,
 .layout-builder-ipe-actions {
   // Make this higher than the z-index of everything else.
-  z-index: 1002;
+  z-index: 1002 !important;
 }
 
 #layout-builder-modal .cd-alert {
